--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,9 @@
     <!-- filepath: /home/aylps/my-site/public/index.html -->
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <!-- <link rel="stylesheet" href="https:"> -->
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Sansita:ital,wght@0,400;0,700;0,800;0,900;1,400;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>As You Like Travel</title>
   </head>
   <body>
